[package]
name = "yewchat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = "0.2.92"
wasm-logger = "0.2.0"
log = "0.4"
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "EventTarget",
] }
wasm-bindgen-futures = "0.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
js-sys = "0.3"
gloo-net = { version = "0.5", features = ["websocket"] }